unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/adroll__AdRollSegmentMember__c.object-meta.xml
<CustomObject>
    <description>Each email whose criteria match the segment is stored as an AdRoll Segment Member</description>
    <label>RollWorks Segment Member (Deprecated)</label>
    <nameField>
        <displayFormat>ARSM-{0000000}</displayFormat>
        <label>RollWorks Segment Member Id (Deprecated)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Segment Members (Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>