unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/fields/adroll__AdRollSegment__c.field-meta.xml
<CustomField>
    <fullName>adroll__AdRollSegment__c</fullName>
    <description>Segment for the RollWorks Segment Member</description>
    <inlineHelpText>Segment for the RollWorks Segment Member</inlineHelpText>
    <label>RollWorks Segment (Deprecated)</label>
    <referenceTo>adroll__AdRollSegment__c</referenceTo>
    <relationshipLabel>RollWorks Segment Members</relationshipLabel>
    <relationshipName>AdRollSegmentMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>