unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/fields/adroll__Contact__c.field-meta.xml
<CustomField>
    <fullName>adroll__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that is the source for the Segment Member</description>
    <inlineHelpText>Contact that is the source for the Segment Member</inlineHelpText>
    <label>Contact (Deprecated)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RollWorks Segment Members</relationshipLabel>
    <relationshipName>AdRollSegmentMembers</relationshipName>
    <type>Lookup</type>
</CustomField>