unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/fields/adroll__Email__c.field-meta.xml
<CustomField>
    <fullName>adroll__Email__c</fullName>
    <description>Email of the Contact or Lead that will be Sent to RollWorks</description>
    <externalId>true</externalId>
    <inlineHelpText>Email of the Contact or Lead that will be Sent to RollWorks</inlineHelpText>
    <label>Email (Deprecated)</label>
    <required>true</required>
    <type>Email</type>
</CustomField>