unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/fields/adroll__EmailSegment__c.field-meta.xml
<CustomField>
    <fullName>adroll__EmailSegment__c</fullName>
    <description>Unique Identifier to allow upserts</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier to allow upserts</inlineHelpText>
    <label>EmailSegment (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>