unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/fields/adroll__Lead__c.field-meta.xml
<CustomField>
    <fullName>adroll__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead that is the source for the Segment Member</description>
    <inlineHelpText>Lead that is the source for the Segment Member</inlineHelpText>
    <label>Lead (Deprecated)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>RollWorks Segment Members</relationshipLabel>
    <relationshipName>AdRollSegmentMembers</relationshipName>
    <type>Lookup</type>
</CustomField>