unpackaged/main/default/objects/adroll__AdRollSegmentMember__c/fields/adroll__Synced__c.field-meta.xml
<CustomField>
    <fullName>adroll__Synced__c</fullName>
    <description>If checked the record has been synced to RollWorks</description>
    <formula>NOT(ISNULL(adroll__LastSyncedTime__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked the record has been synced to RollWorks</inlineHelpText>
    <label>Synced (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>